--- a/glazzite/package.json
+++ b/glazzite/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
     "react-obfuscate": "^3.6.8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -42,7 +43,4 @@
     "gh-pages": "^3.1.0"
   },
   "homepage": "https://Glazzerino.github.io/my_website"
-
-
-
 }
